# LibXtract

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  HEADER  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  config.h.in  configure.ac  configure.in  libxtract.pc.in
.github/workflows/: ci.yml  claude-review.yml
bench/: Makefile  bench_scalar.c  ubench.h
doc/: Doxyfile  Makefile  Makefile.am  documentation.doxygen  documentation.doxygen.in
documentation/: annotated.html  classes.html  dir_41b1750e26459ec2da49a8d494e225c2.html  dir_41b1750e26459ec2da49a8d494e225c2_dep.map  dir_41b1750e26459ec2da49a8d494e225c2_dep.md5  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  group__delta.html  group__helper.html  group__libxtract.html  group__scalar.html  group__stateful.html  group__vector.html  index.html  libxtract_8h.html  libxtract_8h__incl.map  libxtract_8h__incl.md5  libxtract_8h_source.html  modules.html  struct__xtract__amp__tracker.html  struct__xtract__frame__tracker.html  struct__xtract__function__descriptor.html  structxtract__mel__filter__.html  xtract__delta_8h.html  xtract__delta_8h__dep__incl.map  xtract__delta_8h__dep__incl.md5  xtract__delta_8h__incl.map  xtract__delta_8h__incl.md5  xtract__delta_8h_source.html  xtract__helper_8h.html  xtract__helper_8h__dep__incl.map  xtract__helper_8h__dep__incl.md5  xtract__helper_8h__incl.map  xtract__helper_8h__incl.md5  xtract__helper_8h_source.html  xtract__macros_8h.html  (+16 more)
examples/: Make.config  Makefile  Makefile.am
examples/MSP/: Info.plist  Makefile  xtract~.c
examples/MSP/test/: magspec  xtract-test.pat
examples/puredata/: Makefile.am  bark-example.pd  harmonic_spectrum.pd  lpcc-test.pd  regression-test.pd  simple-example.pd  simple-test.pd  spectrum-512-test.pd  subband_mean.pd  subframe-test.pd  tonality_from_subbands.pd  xtract~.c
examples/puredata/xtract/: a_bavg.pd  a_blockswap~.pd  a_hann.pd  a_mton.pd  a_output~.pd  a_spigot~.pd  f0.pd  mfcc.pd  sonogram.pd  xtract-help.pd
examples/simpletest/: Make.config  Makefile  Makefile.am  WaveFile.cpp  WaveFile.h  simpletest.c  simpletest.cpp
include/xtract/: libxtract.h  xtract_delta.h  xtract_macros.h  xtract_scalar.h  xtract_stateful.h  xtract_vector.h
m4/: ac_jni_include_dir.m4  ac_prog_javac.m4  ac_prog_javac_works.m4  swig_multi_module_support.m4
src/: Make.config  Makefile.am  delta.c  descriptors.c  fft.h  fftsg.c  fini.c  helper.c  init.c  libxtract.c  scalar.c  stateful.c  vector.c  window.c  xtract_globals_private.h  xtract_macros_private.h  xtract_window_private.h
src/c-ringbuf/: ringbuf.c  ringbuf.h
src/dywapitchtrack/: dywapitchtrack.c  dywapitchtrack.h
src/ooura/: fftsg.h
swig/: .gitignore  Makefile  Makefile.am  test.java  test.js  test.py  xtract.i
swig/java/: Makefile.am  SWIG.java  jxtract.i  test.java
swig/python/: .gitignore  Makefile.am  test.py
tests/: .xttest_scalar.cpp.swp  Make.config  Makefile  xttest_main.cpp  xttest_scalar.cpp  xttest_tables.hpp  xttest_util.cpp  xttest_util.hpp  xttest_vector.cpp
vc2012/LibXtract_static_dll/: LibXtract.sln
vc2012/LibXtract_static_dll/LibXtract/: LibXtract.vcxproj  LibXtract.vcxproj.filters
vc2012/LibXtract_static_dll/LibXtract/Debug/: CL.read.1.tlog  CL.write.1.tlog  LibXtract.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
vc2012/LibXtract_static_dll/LibXtract/Release/: CL.read.1.tlog  CL.write.1.tlog  LibXtract.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vc2012/LibXtract_static_llib/LibXtract/: LibXtract.vcxproj  ReadMe.txt  stdafx.cpp
vc2012/LibXtract_static_llib/LibXtract/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  LibXtract.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog  vc110.ib_pdb_index  vc110.idb
vc2012/LibXtract_static_llib/LibXtract/Release/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  LibXtract.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog
xtract/: Makefile.am  libxtract.h  xtract_delta.h  xtract_helper.h  xtract_macros.h  xtract_scalar.h  xtract_stateful.h  xtract_types.h  xtract_vector.h
